src/objects/Lookup_Metadata__c.object
<CustomObject>
    <description>Central storage for custom autocomplete or lookup data.

This will ultimately be synced to other picklist field sources ie. Callista/SMS picklist data, or school selection options.</description>
    <fields>
        <fullName>Collection__c</fullName>
        <description>Label for the collection that will use values provided.</description>
        <label>Collection</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This field accommodates a specific use case - if the collection is &apos;City&apos; then this field is used to filter down the results set to only those cities within a specific &apos;Country&apos;.  If Country is not provided then we do not filter by this value.</description>
        <label>Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>value to display in the lookup or autocomplete. This may be an aggregate of multiple fields to assist user i.e. Account, city, state.  Ideally this is maintained via workflow rules.</description>
        <externalId>true</externalId>
        <inlineHelpText>value to display in the lookup or autocomplete. This may be an aggregate of multiple fields to assist user i.e. Account, city, state.  Ideally this is maintained via workflow rules.</inlineHelpText>
        <label>Label</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Actual value that is assigned when associated label is selected.</description>
        <label>Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <label>sObject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Lookup Metadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sObject__c</columns>
        <columns>Collection__c</columns>
        <columns>Label__c</columns>
        <columns>Value__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LM Reference {000000}</displayFormat>
        <label>Lookup Metadata Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Metadata</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>